tests/backend/checkmach/fail2.ml
let[@assert noalloc] test x = (x,x)
